--- a/src/Components/AlbumContent/albumContent.module.css
+++ b/src/Components/AlbumContent/albumContent.module.css
@@ -1,35 +1,34 @@
- .card{
-    border:5px solid magenta;
-    width:100%;
-    height:86%;
-    position: relative;
-    margin-top:10%;
-    overflow-y: auto; 
-   
-    
-    display: flex;
+.card {
+  border: 5px solid magenta;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  margin-top: 10%;
+  overflow-y: auto; 
+  display: flex;
   flex-wrap: wrap; 
   row-gap: 10px;
   column-gap: 10px;
   padding: 10px;
   box-sizing: border-box;
 }
-.card1{
-  border:5px solid rgb(62, 62, 108);
-  width:100%;
-  height:94.2%;
+
+.card1 {
+  border: 5px solid rgb(62, 62, 108);
+  background-color: blueviolet;
+  width: 100%;
+  height: 94.2%;
   overflow-y: scroll;
   position: relative;
-  margin-top:0%;
-  
+  margin-top: 0;
   flex-grow: 1; 
   display: flex;
-flex-wrap: wrap; 
-
+  flex-wrap: wrap; 
 }
-.album{
-  
+
+.album {
   border: 5px solid rgb(140, 9, 173);
+  background-color: rgb(26, 10, 42);
   width: 30%;
   height: 30%;
   border-radius: 15%;
@@ -39,8 +38,24 @@ flex-wrap: wrap;
   justify-content: center; 
   overflow: hidden; 
   text-align: center; 
-  
-} 
+  transition: background-color 0.3s ease, transform 0.3s ease;
+}
 
+.album:hover {
+  background-color: rgba(140, 9, 173, 0.1); /* Lighten background on hover */
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  transform: scale(1.02); /* Slightly enlarge on hover */
+}
 
- 
+.del {
+  height: 60%;
+  width: 10%;
+  margin-left: 70%;
+}
+
+.del img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  background-color: black;
+}
